k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-price-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-price-api
  template:
    metadata:
      labels:
        app: car-price-api
    spec:
      containers:
      - name: api
        image: rakeshthakkuri/car-price-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
