k8s/car-price-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-price-api-service
spec:
  type: NodePort
  selector:
    app: car-price-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: car-price-ui
spec:
  type: NodePort
  selector:
    app: car-price-ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30003
