k8s/car-price-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-price-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: carprice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car-price-ui
            port:
              number: 8501
